# 4OOP

./: CMakeLists.txt  main.cpp
include/: figures.h
src/: figures.cpp
test/: test.cpp
